# dicecalc

./: CMakeLists.txt  main.cpp
